tests/error/poly_errors/type_apply_not_generic1.err
Error: Not generic (at $FILE:15:4)
   | 
13 | @guppy
14 | def main() -> None:
15 |     foo[int](0)
   |     ^^^^^^^^ `foo` is not generic, so no type parameters can be provided

Guppy compilation failed due to 1 previous error
